[package]
name = "lux"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A kubernetes log multiplexor"
documentation = "https://softprops.github.io/lux"
homepage = "https://github.com/softprops/lux"
repository = "https://github.com/softprops/lux"
keywords = ["hyper", "kubernetes", "k8s"]
license = "MIT"
build = "build.rs"

[[bin]]
doc = false
name = "lux"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
hyper="0.9"
serde = "0.8"
serde_json = "0.8"
term = "0.2"
rand = "0.3"
url = "1.2"
clap = "2.14"
