[package]
name = "lux-rs"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A kubernetes log multiplexor"
documentation = "https://softprops.github.io/lux"
homepage = "https://github.com/softprops/lux"
repository = "https://github.com/softprops/lux"
keywords = ["hyper", "kubernetes", "k8s"]
license = "MIT"
build = "build.rs"

[[bin]]
doc = false
name = "lux"

[build-dependencies]
serde_codegen = "0.9"

[dependencies]
hyper="0.10"
serde = "0.9"
serde_json = "0.9"
term = "0.4"
rand = "0.3"
url = "1.4"
clap = "2.20"
